<resources>
    <string name="authing_account_edit_text_hint">Enter&#160;</string>
    <string name="authing_username">User Name</string>
    <string name="authing_email">Email</string>
    <string name="authing_phone">Phone</string>
    <string name="authing_email_edit_text_hint">Enter email</string>
    <string name="authing_password_edit_text_hint">Enter password</string>
    <string name="authing_password_confirm_edit_text_hint">Confirm password</string>
    <string name="authing_login">Login</string>
    <string name="authing_login_register">Login / Register</string>
    <string name="authing_verify_code_edit_text_hint">Enter verify code</string>
    <string name="authing_captcha_code_edit_text_hint">Enter captcha code</string>
    <string name="authing_get_verify_code">Get code</string>
    <string name="authing_get_verify_code_tip">Get code ($s)</string>
    <string name="authing_get_verify_code_resend">ReSend</string>
    <string name="authing_get_verify_code_error">Get code failed</string>
    <string name="authing_login_by_account_and_password">Login by account and password</string>
    <string name="authing_login_by_phone_and_verify_code">Login by SMS code</string>
    <string name="authing_resend_after">%1$d</string>
    <string name="authing_register">Register</string>
    <string name="authing_welcome_to">Welcome to</string>
    <string name="authing_login_by_phone_code">Phone Code</string>
    <string name="authing_login_by_email_code">Email Code</string>
    <string name="authing_login_by_password">Password</string>
    <string name="authing_register_by_phone_code">Phone Code</string>
    <string name="authing_register_by_email">Email PassWord</string>
    <string name="authing_register_by_email_code">Email Code</string>
    <string name="authing_register_by_phone_password">Phone</string>
    <string name="authing_go_login">Sign In Instead</string>
    <string name="authing_tip_no_account">No account?</string>
    <string name="authing_register_now">Sign Up</string>
    <string name="authing_3rd_login">Or sign in with</string>
    <string name="authing_forgot_password">Forgot Password</string>
    <string name="authing_find_password_back">Reset password</string>
    <string name="authing_reset_password">@string/authing_find_password_back</string>
    <string name="authing_reset_success">Reset successfully</string>
    <string name="authing_reset_password_success">Reset password success</string>
    <string name="authing_login_by_new_password">You can continue logging in with the new password</string>
    <string name="authing_go_back_login">Back</string>
    <string name="authing_go_back_login_tips">The login page is automatically displayed in %1$s seconds</string>
    <string name="authing_input_phone_or_email">Enter phone number or email</string>
    <string name="authing_input_phone_or_email_and_code">Please enter your registration telephone/email address and verification code</string>
    <string name="authing_login_by_other_account">Switch account</string>
    <string name="authing_reset_password_by_email_tip">The password reset email has been sent to the mailbox %1$s, and the validity period is 5 minutes.</string>
    <string name="authing_resend_password_reset_email">Resend password reset email</string>
    <string name="authing_bind">Bind</string>
    <string name="authing_unbind">Unbind</string>
    <string name="authing_bind_mfa">Bind MFA</string>
    <string name="authing_go_to_bind_mfa">To Bind</string>
    <string name="authing_bind_mfa_success">Bind successfully</string>
    <string name="authing_bind_mfa_success_tip">Only for secondary verification scenarios</string>
    <string name="authing_login_done">Complete login</string>
    <string name="authing_login_done_tips">%1$ss will automatically log in after</string>
    <string name="authing_has_save">I have saved</string>
    <string name="authing_bind_email">Bind email</string>
    <string name="authing_bind_email_before_tip">The current administrator has enabled two-factor authentication,\nPlease go to the "Email Binding" page</string>
    <string name="authing_bind_email_tip">Please enter the email address used to bind the MFA scenario authentication</string>
    <string name="authing_input_email_code">Enter email code</string>
    <string name="authing_bind_phone">Bind mobile phone number</string>
    <string name="authing_bind_phone_before_tip">The current administrator has enabled two-factor authentication,\nPlease go to the "Mobile Number Binding" page</string>
    <string name="authing_bind_phone_tip">Please enter the mobile phone number used to bind the MFA scene authentication</string>
    <string name="authing_code_sent_to_sms">Code was sent to the telephone</string>
    <string name="authing_code_sent_to_email">Code was sent to the email</string>
    <string name="authing_input_sms_code">Please input SMS code</string>
    <string name="authing_account_login_verify">Login verification</string>
    <string name="authing_bind_otp">Bind OTP</string>
    <string name="authing_bind_otp_before_tip">The current administrator has enabled two-factor authentication,\nPlease bind "OTP" first</string>
    <string name="authing_bind_otp_tip">Please long press and save the following QR code to the phone album, open the Google or Microsoft Authenticator to identify and enter the relevant account information. Finally, enter the obtained OTP passphrase below.</string>
    <string name="authing_bind_otp_code">Digital security code</string>
    <string name="authing_bind_otp_save_qr_code">Save the QR code picture to the album</string>
    <string name="authing_bind_otp_save_qr_code_success">Successfully saved</string>
    <string name="authing_bind_otp_save_qr_code_failed">Save failed</string>
    <string name="authing_bind_otp_success_tip">Please keep your recovery code safe. If the OTP passphrase is lost, a recovery code will be required to log into your account.</string>
    <string name="authing_security_code_tip">Please enter the six-digit security code for the second login verification</string>
    <string name="authing_lost_security_code">Lost security code?</string>
    <string name="authing_recovery_code">Recovery code</string>
    <string name="authing_use_recovery_code">Use recovery code</string>
    <string name="authing_use_recovery_code_tip">If no, contact the administrator</string>
    <string name="authing_use_recovery_code_login_tip">Login successful, please save your new OTP recovery code：</string>
    <string name="authing_unbind_otp_and_login">Unbind the OTP password and log in</string>
    <string name="authing_recovery_code_saved">Already saved the code</string>
    <string name="authing_copied">copied</string>
    <string name="authing_bind_face">Bind face authentication</string>
    <string name="authing_bind_face_before_tip">The current administrator has enabled secondary verification,\nPlease go to the "Face Recognition Binding" page</string>
    <string name="authing_other_mfa">Other authentication method</string>
    <string name="authing_mfa_login_verify">Account login secondary verification</string>
    <string name="authing_mfa_verify_phone">SMS</string>
    <string name="authing_mfa_verify_email">Email</string>
    <string name="authing_mfa_verify_otp">OTP</string>
    <string name="authing_mfa_verify_face">Face</string>
    <string name="authing_mfa_verify_device">Device</string>
    <string name="authing_mfa_login_verify_device">Authenticate your device</string>
    <string name="authing_mfa_verify_device_tip">Enter the captcha to proceed.</string>
    <string name="authing_mfa_verify_device_sub_tip">A message containing a verification code has been sent to your {%1$s}.</string>
    <string name="authing_mfa_verify_device_lost_code">Didn\'t receive the verification code?</string>
    <string name="authing_mfa_verify_device_lost_code_tip">If you do not receive the capTcha, we can resend a new set of capTcha, or you can use the bound secondary verification route:</string>
    <string name="authing_user_info_complete">Fill up information</string>
    <string name="authing_complete_tip">in order to have a better experience, please improve your information first</string>
    <string name="authing_submit">Submit</string>
    <string name="authing_male">Male</string>
    <string name="authing_female">Female</string>
    <string name="authing_first_time_login_tip">To secure your account, please reset password</string>
    <string name="authing_first_time_login_count_down">Please reset password within 10 minutes</string>
    <string name="authing_one_click">Login with your phone number</string>
    <string name="authing_current_phone_login">Login with current phone number</string>
    <string name="authing_other_login">Other login methods</string>
    <string name="authing_logout">Log out</string>
    <string name="authing_delete_account">Delete Account</string>
    <string name="authing_delete_account_success">Account delete success</string>
    <string name="authing_biometric_title">Biometric authentication</string>
    <string name="authing_biometric_tip">Log in using your biometric credential</string>
    <string name="authing_select_country_code">Select country/region </string>
    <string name="authing_enter_country_search">Enter a country or region name to search</string>
    <string name="authing_cancel">Cancel</string>
    <string name="authing_skip">Skip</string>
    <string name="authing_agree">Agree</string>
    <string name="authing_confirm">Confirm</string>
    <string name="authing_picker_date">Select birthday</string>
    <string name="authing_choose_how_to_connect">Choose how to connect</string>
    <string name="authing_choose_how_to_connect_tip">If you are bound to an existing account, you can directly log in to the existing account by this method next time.</string>
    <string name="authing_create_new_account">Create a new account</string>
    <string name="authing_bind_to_existing_account">Bind to an existing account</string>
    <string name="authing_bind_existing_account">Bind existing account</string>
    <string name="authing_bind_existing_account_tip">After binding, you can log in to this account directly by this method next time</string>
    <string name="authing_bind_select_account">Select an Account to log in</string>
    <string name="authing_bind_biometric_account_tip">The fingerprint binding account is not identified. Please enter the account information to bind.</string>
    <string name="authing_bind_biometric_account_result">Binding Results</string>
    <string name="authing_bind_biometric_account_success">You have successfully bound「%1$s」</string>
    <string name="authing_delete_account_tips">After logout, all data of this account will be deleted and irreversible, please operate with caution!</string>
    <string name="authing_code_sent_to_phone">A code will be sent to </string>
    <string name="authing_network_error_tips">The network is abnormal. Check the network Settings</string>
    <string name="authing_reading_guide">Reading guide</string>
    <string name="authing_privacy_dialog_title">Please read and agree</string>
    <string name="authing_privacy_dialog_confirm">Agree and continue</string>
    <string name="authing_verify_account">Verify the account</string>
    <string name="authing_verify_account_email_send">Verify that the email has been sent</string>
    <string name="authing_verify_account_email_send_success">The verification email has been sent to your email address，\nPlease click Connect to verify your login</string>
    <string name="authing_verify_succeed">Verification passed</string>
    <string name="authing_feedback">Need help?</string>
    <string name="authing_contact_info">Contact</string>
    <string name="authing_related_issue">Problem</string>
    <string name="authing_feedback_description">Problem description</string>
    <string name="authing_feedback_screenshot">Screen shot</string>
</resources>