<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authing_form_start_end_margin"
        android:layout_marginEnd="@dimen/authing_form_start_end_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/authing_app_name"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/authing_feedback"/>

        <cn.authing.guard.MandatoryField
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/authing_contact_info"
            app:asteriskPosition="left"/>

        <cn.authing.guard.AccountEditText
            android:background="@drawable/authing_edit_text_layout_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/authing_related_issue" />

        <cn.authing.guard.feedback.IssueLayout
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/authing_feedback_description" />

        <cn.authing.guard.feedback.FeedbackDescriptionEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="top"
            android:padding="8dp"
            android:background="@drawable/authing_edit_text_layout_background"
            android:lines="3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/authing_feedback_screenshot" />

        <cn.authing.guard.feedback.ImagePickerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:horizontalSpacing="4dp"
            android:verticalSpacing="4dp"
            android:layout_marginTop="4dp" />

        <cn.authing.guard.ErrorTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp" />

        <cn.authing.guard.feedback.FeedbackSubmitButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authing_submit" />
    </LinearLayout>

</ScrollView>