<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/authing_form_start_end_margin"
    android:layout_marginEnd="@dimen/authing_form_start_end_margin">

    <cn.authing.guard.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/authing_title_layout_height"
        app:showBackIcon="true"
        app:showTitleText="true"
        app:titleText="@string/authing_reset_success"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:src="@mipmap/authing_reset_password_success"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authing_form_top_margin"
        android:gravity="center"
        android:text="@string/authing_reset_password_success"
        android:textColor="@color/authing_text_black"
        android:textSize="@dimen/authing_text_large_size"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/authing_login_by_new_password"
        android:textColor="@color/authing_text_gray"
        android:textSize="@dimen/authing_text_middle_size"
        android:layout_gravity="center" />

    <cn.authing.guard.GoLoginButton
        android:id="@+id/btn_go_back_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/authing_button_height"
        android:layout_marginTop="40dp"
        android:background="@drawable/authing_button_background"
        android:textColor="#FFF"
        android:textSize="@dimen/authing_text_large_size"
        android:text="@string/authing_go_back_login"
        android:textAppearance="@android:style/Widget.TextView"
        android:gravity="center"
        style="?android:attr/borderlessButtonStyle"/>

    <cn.authing.guard.GoLoginTipsText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/authing_form_top_margin"
        android:text="@string/authing_go_back_login_tips"
        android:layout_gravity="center"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="16dp"
        android:layout_weight="1"/>

    <include layout="@layout/authing_powered_by" />

</LinearLayout>