<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/authing_form_start_end_margin"
    android:paddingEnd="@dimen/authing_form_start_end_margin">

    <cn.authing.guard.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/authing_title_layout_height"
        app:showBackIcon="true"
        app:showTitleText="true"
        app:titleText="@string/authing_bind_phone" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@mipmap/authing_flow_success" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authing_form_top_margin"
        android:gravity="center"
        android:text="@string/authing_bind_mfa_success"
        android:textColor="@color/authing_text_black"
        android:textSize="@dimen/authing_text_large_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/authing_bind_mfa_success_tip"
        android:textColor="@color/authing_text_gray"
        android:textSize="@dimen/authing_text_middle_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="16dp" />

    <cn.authing.guard.mfa.GoMFAFinishLoginButton
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/authing_button_height"
        android:layout_marginStart="74dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="74dp"
        android:background="@drawable/authing_button_background"
        android:gravity="center"
        android:text="@string/authing_login_done"
        android:textAppearance="@android:style/Widget.TextView"
        android:textColor="#FFF"
        android:textSize="@dimen/authing_text_large_size" />

    <cn.authing.guard.mfa.GoMFAFinishLoginTipsText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authing_form_top_margin"
        android:layout_marginBottom="@dimen/authing_margin_40"
        android:text="@string/authing_login_done_tips" />

    <include layout="@layout/authing_powered_by" />

</LinearLayout>