<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/authing_form_start_end_margin"
    android:paddingEnd="@dimen/authing_form_start_end_margin">

    <cn.authing.guard.TitleLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/authing_title_layout_height"
        app:showBackIcon="true"
        app:showTitleText="true"
        app:titleText="@string/authing_mfa_login_verify" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/authing_margin_40">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authing_code_sent_to_sms"
            android:textColor="@color/authing_text_gray"
            android:textSize="@dimen/authing_text_large_size" />

        <cn.authing.guard.PhoneLabel
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/authing_text_gray"
            android:textSize="@dimen/authing_text_large_size" />
    </LinearLayout>

    <cn.authing.guard.VerifyCodeEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/authing_form_top_margin"
        app:codeMode="frame" />

    <cn.authing.guard.mfa.MFAPhoneButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/authing_button_height"
        android:layout_marginTop="@dimen/authing_margin_24"
        android:background="@drawable/authing_button_background"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/authing_login"
        android:textAppearance="@android:style/Widget.TextView"
        android:textColor="@color/authing_white"
        android:textSize="@dimen/authing_text_large_size"
        app:mfaType="verify" />

    <cn.authing.guard.GetVerifyCodeButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/authing_button_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/authing_margin_16"
        android:background="@drawable/authing_button_background_gray"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/authing_get_verify_code"
        android:textAppearance="@android:style/Widget.TextView"
        android:textColor="@color/authing_text_black"
        app:verifyAuthType="mfaVerify"
        app:verifyAutoGetCode="true"
        app:verifyCodeType="phone"
        app:verifyCountDownTip="@string/authing_get_verify_code_tip"
        app:verifyEnableTextColor="@color/authing_text_gray" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="16dp" />

    <cn.authing.guard.mfa.GoOtherMFAVerifyButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/authing_button_height"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/authing_button_background_gray"
        android:gravity="center"
        android:text="@string/authing_other_mfa"
        android:textColor="@color/authing_text_black"
        android:textSize="@dimen/authing_text_large_size"
        app:currentMfaVerifyType="sms" />

    <include layout="@layout/authing_powered_by" />

</LinearLayout>