<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/authing_form_start_end_margin"
    android:paddingEnd="@dimen/authing_form_start_end_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:text="@string/authing_choose_how_to_connect"
        android:textColor="@color/authing_text_black"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/authing_choose_how_to_connect_tip"
        android:textColor="@color/authing_text_gray"
        android:textSize="@dimen/authing_text_large_size" />

    <ImageView
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_authing_bind" />

    <cn.authing.guard.social.bind.GoSocialCreateButton
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/authing_edit_text_height"
        android:layout_marginBottom="16dp"
        android:background="@drawable/authing_button_background_gray"
        android:gravity="center"
        android:text="@string/authing_create_new_account"
        android:textAppearance="@android:style/Widget.TextView"
        android:textColor="@color/authing_text_black"
        android:textSize="@dimen/authing_text_large_size" />

    <cn.authing.guard.social.bind.GoSocialBindButton
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/authing_edit_text_height"
        android:background="@drawable/authing_button_background"
        android:gravity="center"
        android:text="@string/authing_bind_to_existing_account"
        android:textAppearance="@android:style/Widget.TextView"
        android:textColor="@color/authing_white"
        android:textSize="@dimen/authing_text_large_size" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="16dp" />

    <include layout="@layout/authing_powered_by" />

</LinearLayout>